--- a/package.json
+++ b/package.json
@@ -7,7 +7,25 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "express": "^4.16.2",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "@material-ui/core": "^1.1.0",
+    "@material-ui/icons": "^1.1.0",
+    "date-fns": "^2.0.0-alpha.7",
+    "downshift": "^1.31.15",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "luxon": "^1.2.0",
+    "material-ui-pickers": "^1.0.0-rc.9",
+    "moment": "^2.22.1",
+    "react-autosuggest": "^9.3.4",
+    "react-compose": "^2.0.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "react-select": "^1.2.1",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
